- Height adjustments for the landing page to ensure the header can be read on mobile - Removed duplicated row declaration

--- a/css/fox.css
+++ b/css/fox.css
@@ -105,12 +105,6 @@ em {
   width: 96%;
 }
 
-.row::after {
-	content: "";
-	display: table;
-	clear: both;
-}
-
 /* FORMS */
 .full-width {
   width: 100%;
